--- a/src/components/atoms/button/button.scss
+++ b/src/components/atoms/button/button.scss
@@ -1,14 +1,14 @@
 @use "../../variables" as *;
 
-.button-wrapper {
+.button {
   width: 180px;
   height: 45px;
   background-color: $v_black;
   display: flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
-  transition: background-color 0.2 ease;
+  color: $v_white;
+  transition: background-color 0.2s ease;
 
   @media screen and (min-width: $v_breakpoint_md) {
     width: 150px;
@@ -22,9 +22,6 @@
 
   &:hover {
     background-color: $v_orange_bistre;
-  }
-
-  .button-text {
     color: $v_white;
     text-decoration: none;
   }
