--- a/src/components/molecules/card/card.html
+++ b/src/components/molecules/card/card.html
@@ -7,8 +7,6 @@
   </div>
   <div class="card-body">
     <p class="card-text">card-text</p>
-    <div class="button-wrapper">
-      <a href="#" class="button-text">btn-text</a>
-    </div>
+    <a href="#" class="button">btn-text</a>
   </div>
 </div>
