--- a/src/components/molecules/news-and-events-title/news-and-events-title.scss
+++ b/src/components/molecules/news-and-events-title/news-and-events-title.scss
@@ -7,6 +7,7 @@
   .news-title-left {
     font-size: $v_fontsize-l;
     font-family: $v_fontfamily_mincho;
+    margin: 0;
 
     @media screen and (min-width: $v_breakpoint_lg) {
       font-size: $v_fontsize_xxl;
