不要なmarginを削除

--- a/src/components/molecules/news-and-events-title/news-and-events-title.scss
+++ b/src/components/molecules/news-and-events-title/news-and-events-title.scss
@@ -17,6 +17,6 @@
   .news-title-right {
     font-size: $v_fontsize-m;
     font-family: $v_fontfamily_gothic;
-    margin-left: 16px;
+    margin: 0 0 0 16px;
   }
 }
