--- a/src/components/organisms/news/news.scss
+++ b/src/components/organisms/news/news.scss
@@ -11,6 +11,7 @@
 		padding: 20px;
 		background-color: $v_white;
 		border: 1px solid $v_gray_gainsboro;
+		border-bottom: none;
 
 		time {
 			display: block;
@@ -30,6 +31,7 @@
 
 	.last-news-article-wrapper {
 		margin-bottom: 30px;
+		border-bottom: 1px solid $v_gray_gainsboro;
 	}
 
 	.news-more-wrapper {
