delete one text-decoration and add flex direction

--- a/src/components/molecules/news-and-events-more/news-and-events-more.scss
+++ b/src/components/molecules/news-and-events-more/news-and-events-more.scss
@@ -1,9 +1,10 @@
 @use "../../variables" as *;
 
 .news-more-title {
+	display: flex;
+	align-items: center;
 	color: $v_black;
 	font-size: $v_fontsize_s;
-	text-decoration: none;
 	transition: color 0.2 ease;
 
 	i {
