--- a/src/components/molecules/news-and-events-title/news-and-events-title.scss
+++ b/src/components/molecules/news-and-events-title/news-and-events-title.scss
@@ -17,6 +17,7 @@
   .news-title-right {
     font-size: $v_fontsize-m;
     font-family: $v_fontfamily_gothic;
-    margin: 0 0 0 16px;
+    margin: 0;
+    margin-left: 16px;
   }
 }
