--- a/src/components/organisms/events/events.html
+++ b/src/components/organisms/events/events.html
@@ -1,24 +1,35 @@
-<div class="news-wrapper">
-	<div class="news-title-wrapper">
-		<p class="news-title-left">News</p>
-		<p class="news-title-right">イベント</p>
-	</div>
-	<div class="news-events-wrapper">
-		<p>全ての業種に対応した起業応援セミナーを開催します。</p>
-		<time datetime="2018-08-23">2018.08.23</time>
-	</div>
-	<div class="news-events-wrapper">
-		<p>第3回 Switchクリエイター交流会開催いたします！</p>
-		<time datetime="2018-08-23">2018.08.23</time>
-	</div>
-	<div class="news-events-wrapper last-news-events-wrapper">
-		<p>Webビジネス初心者の方必見！Webサイト作成講座を3回にわたって開催します。</p>
-		<time datetime="2018-08-23">2018.08.23</time>
-	</div>
-	<div class="news-more-wrapper">
-		<a href="#" class="news-more-title">
-			イベント一覧
-			<i class="fas fa-angle-right"></i>
-		</a>
-	</div>
+<div class="news-events-wrapper">
+  <div class="news-title-wrapper">
+    <p class="news-title-left">News</p>
+    <p class="news-title-right">イベント</p>
+  </div>
+  <div class="img-and-news-wrapper">
+    <img src="../../../page/img/organisms-img-2.png" />
+    <div class="news-events-wrapper">
+      <p>全ての業種に対応した起業応援セミナーを開催します。</p>
+      <time datetime="2018-08-23">2018.08.23</time>
+    </div>
+  </div>
+  <div class="img-and-news-wrapper">
+    <img src="../../../page/img/organisms-img-2.png" />
+    <div class="news-events-wrapper">
+      <p>第3回 Switchクリエイター交流会開催いたします！</p>
+      <time datetime="2018-08-23">2018.08.23</time>
+    </div>
+  </div>
+  <div class="img-and-news-wrapper">
+    <img src="../../../page/img/organisms-img-2.png" />
+    <div class="news-events-wrapper last-news-events-wrapper">
+      <p>
+        Webビジネス初心者の方必見！Webサイト作成講座を3回にわたって開催します。
+      </p>
+      <time datetime="2018-08-23">2018.08.23</time>
+    </div>
+  </div>
+  <div class="news-more-wrapper">
+    <a href="#" class="news-more-title">
+      イベント一覧
+      <i class="fas fa-angle-right"></i>
+    </a>
+  </div>
 </div>
