--- a/src/components/organisms/events/events.html
+++ b/src/components/organisms/events/events.html
@@ -4,27 +4,33 @@
     <p class="news-title-right">イベント</p>
   </div>
   <div class="img-and-news-wrapper">
-    <img src="../../../page/img/organisms-img-2.png" />
-    <div class="news-events-wrapper">
-      <p>全ての業種に対応した起業応援セミナーを開催します。</p>
-      <time datetime="2018-08-23">2018.08.23</time>
-    </div>
+		<a href="#">
+			<img src="../../../page/img/organisms-img-2.png" />
+			<div class="news-events-wrapper">
+				<p>全ての業種に対応した起業応援セミナーを開催します。</p>
+				<time datetime="2018-08-23">2018.08.23</time>
+			</div>
+		</a>
   </div>
   <div class="img-and-news-wrapper">
-    <img src="../../../page/img/organisms-img-2.png" />
-    <div class="news-events-wrapper">
-      <p>第3回 Switchクリエイター交流会開催いたします！</p>
-      <time datetime="2018-08-23">2018.08.23</time>
-    </div>
+		<a href="#">
+			<img src="../../../page/img/organisms-img-1.png" />
+			<div class="news-events-wrapper">
+				<p>第3回 Switchクリエイター交流会開催いたします！</p>
+				<time datetime="2018-08-23">2018.08.23</time>
+			</div>
+		</a>
   </div>
-  <div class="img-and-news-wrapper">
-    <img src="../../../page/img/organisms-img-2.png" />
-    <div class="news-events-wrapper last-news-events-wrapper">
-      <p>
-        Webビジネス初心者の方必見！Webサイト作成講座を3回にわたって開催します。
-      </p>
-      <time datetime="2018-08-23">2018.08.23</time>
-    </div>
+  <div class="img-and-news-wrapper last-img-and-news-wrapper">
+		<a href="#">
+			<img src="../../../page/img/organisms-img-3.png" />
+			<div class="news-events-wrapper">
+				<p>
+					Webビジネス初心者の方必見！Webサイト作成講座を3回にわたって開催します。
+				</p>
+				<time datetime="2018-08-23">2018.08.23</time>
+			</div>
+		</a>
   </div>
   <div class="news-more-wrapper">
     <a href="#" class="news-more-title">
