要件を達成

--- a/src/components/organisms/events/events.html
+++ b/src/components/organisms/events/events.html
@@ -5,7 +5,9 @@
   </div>
   <div class="img-and-news-wrapper">
 		<a href="#">
-			<img src="../../../page/img/organisms-img-2.png" />
+			<div class="img-wrapper">
+				<img src="../../../page/img/organisms-img-2.png" />
+			</div>
 			<div class="news-events-wrapper">
 				<p>全ての業種に対応した起業応援セミナーを開催します。</p>
 				<time datetime="2018-08-23">2018.08.23</time>
@@ -14,7 +16,9 @@
   </div>
   <div class="img-and-news-wrapper">
 		<a href="#">
-			<img src="../../../page/img/organisms-img-1.png" />
+			<div class="img-wrapper">
+				<img src="../../../page/img/organisms-img-1.png" />
+			</div>
 			<div class="news-events-wrapper">
 				<p>第3回 Switchクリエイター交流会開催いたします！</p>
 				<time datetime="2018-08-23">2018.08.23</time>
@@ -23,7 +27,9 @@
   </div>
   <div class="img-and-news-wrapper last-img-and-news-wrapper">
 		<a href="#">
-			<img src="../../../page/img/organisms-img-3.png" />
+			<div class="img-wrapper">
+				<img src="../../../page/img/organisms-img-3.png" />
+			</div>
 			<div class="news-events-wrapper">
 				<p>
 					Webビジネス初心者の方必見！Webサイト作成講座を3回にわたって開催します。
