--- a/src/components/organisms/events/events.scss
+++ b/src/components/organisms/events/events.scss
@@ -19,7 +19,6 @@
 			display: flex;
 			text-decoration: none;
 			color: $v_black;
-			width: 400px;
 
 			&:hover {
 				img {
@@ -27,13 +26,19 @@
 				}
 			}
 
-			img {
-				display: none;
+			.img-wrapper {
+				overflow: hidden;
 
-				@media screen and (min-width: $v_breakpoint_lg) {
-					display: block;
-					transition: transform 0.5s ease;
+				img {
+					display: none;
+
+					@media screen and (min-width: $v_breakpoint_lg) {
+						display: block;
+						height: 100%;
+						transition: transform 0.5s ease;
+					}
 				}
+
 			}
 
 			.news-events-wrapper {
@@ -42,7 +47,7 @@
 
 				@media screen and (min-width: $v_breakpoint_lg) {
 					padding: 37.5px 0px 0px 24px;
-					width: 460px;
+					width: 240px;
 				}
 
 				p {
