レビューの修正

--- a/src/components/molecules/news-and-events-title/news-and-events-title.html
+++ b/src/components/molecules/news-and-events-title/news-and-events-title.html
@@ -1,4 +1,4 @@
 <div class="news-title-wrapper">
-  <p class="news-title-left">News</p>
-  <p class="news-title-right">お知らせ</p>
+  <span class="news-title-left">News</span>
+  <span class="news-title-right">お知らせ</span>
 </div>
