--- a/src/components/molecules/news-and-events-more/news-and-events-more.scss
+++ b/src/components/molecules/news-and-events-more/news-and-events-more.scss
@@ -1,12 +1,11 @@
 @use "../../variables" as *;
 
 .news-more-title {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   color: $v_black;
   font-size: $v_fontsize_s;
   transition: color 0.2s ease;
-  width: 112px;
 
   i {
     margin-left: 16px;
