--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -14,6 +14,9 @@
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">CONCEPT</a>
+				<button class="plus-icon">
+					<span></span>
+				</button>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">SERVICE</a>
