xl未満の完成

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -2,7 +2,7 @@
 	<a href="#" class="img-wrapper">
 		<img src="../../../page/img/header-logo.png" class="logo-img" />
 	</a>
-	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false">
 		<div class="humberger-icon"></div>
 		<div class="humberger-icon"></div>
 		<div class="humberger-icon"></div>
@@ -14,10 +14,46 @@
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">CONCEPT</a>
-				<button class="plus-icon">
+				<button class="navbar-toggler plus-icon"  data-toggle="collapse" data-target="#plus-icon" caria-controls="#plus-icon" aria-expanded="false">
 					<span></span>
 				</button>
 			</li>
+			<nav class="navbar nav-wrapper nabvar-light">
+				<div class="collapse navbar-collapse" id="plus-icon">
+					<ul class="navbar-nav">
+						<li class="nav-item plus-icon-nav-item">
+							<a href="#" class="nav-link">ブログアーカイブ</a>
+						</li>
+						<li class="nav-item plus-icon-nav-item">
+							<a href="#" class="nav-link">お知らせアーカイブ</a>
+						</li>
+						<li class="nav-item plus-icon-nav-item">
+							<a href="#" class="nav-link">イベントアーカイブ</a>
+						</li>
+						<li class="nav-item plus-icon-nav-item">
+							<a href="#" class="nav-link">インタビューアーカイブ</a>
+						</li>
+						<li class="nav-item plus-icon-nav-item">
+							<a href="#" class="nav-link">FAQページ</a>
+						</li>
+						<li class="nav-item plus-icon-nav-item">
+							<a href="#" class="nav-link">固定ページ(デフォルト)</a>
+						</li>
+						<li class="nav-item plus-icon-nav-item">
+							<a href="#" class="nav-link">CONCEPT</a>
+						</li>
+						<li class="nav-item plus-icon-nav-item">
+							<a href="#" class="nav-link">SERVICE</a>
+						</li>
+						<li class="nav-item plus-icon-nav-item">
+							<a href="#" class="nav-link">FLOOR</a>
+						</li>
+						<li class="nav-item plus-icon-nav-item">
+							<a href="#" class="nav-link">ACCESS</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
 			<li class="nav-item">
 				<a class="nav-link" href="#">SERVICE</a>
 			</li>
