--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-light fixed-top nav-wrapper">
+<nav class="navbar navbar-light fixed-top nav-wrapper navbar-expand-xl">
+	<div class="container-fluid">
 	<a href="#" class="img-wrapper">
 		<img src="../../../page/img/header-logo.png" class="logo-img" />
 	</a>
@@ -14,46 +15,44 @@
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#">CONCEPT</a>
-				<button class="navbar-toggler plus-icon"  data-toggle="collapse" data-target="#plus-icon" caria-controls="#plus-icon" aria-expanded="false">
+				<button class="navbar-toggler plus-icon"  data-toggle="collapse" data-target="#plus-icon" aria-controls="#plus-icon" aria-expanded="false">
 					<span></span>
 				</button>
 			</li>
-			<nav class="navbar nav-wrapper nabvar-light">
-				<div class="collapse navbar-collapse" id="plus-icon">
-					<ul class="navbar-nav">
-						<li class="nav-item plus-icon-nav-item">
-							<a href="#" class="nav-link">ブログアーカイブ</a>
-						</li>
-						<li class="nav-item plus-icon-nav-item">
-							<a href="#" class="nav-link">お知らせアーカイブ</a>
-						</li>
-						<li class="nav-item plus-icon-nav-item">
-							<a href="#" class="nav-link">イベントアーカイブ</a>
-						</li>
-						<li class="nav-item plus-icon-nav-item">
-							<a href="#" class="nav-link">インタビューアーカイブ</a>
-						</li>
-						<li class="nav-item plus-icon-nav-item">
-							<a href="#" class="nav-link">FAQページ</a>
-						</li>
-						<li class="nav-item plus-icon-nav-item">
-							<a href="#" class="nav-link">固定ページ(デフォルト)</a>
-						</li>
-						<li class="nav-item plus-icon-nav-item">
-							<a href="#" class="nav-link">CONCEPT</a>
-						</li>
-						<li class="nav-item plus-icon-nav-item">
-							<a href="#" class="nav-link">SERVICE</a>
-						</li>
-						<li class="nav-item plus-icon-nav-item">
-							<a href="#" class="nav-link">FLOOR</a>
-						</li>
-						<li class="nav-item plus-icon-nav-item">
-							<a href="#" class="nav-link">ACCESS</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
+			<div class="collapse navbar-collapse" id="plus-icon">
+				<ul class="navbar-nav">
+					<li class="nav-item plus-icon-nav-item">
+						<a href="#" class="nav-link">ブログアーカイブ</a>
+					</li>
+					<li class="nav-item plus-icon-nav-item">
+						<a href="#" class="nav-link">お知らせアーカイブ</a>
+					</li>
+					<li class="nav-item plus-icon-nav-item">
+						<a href="#" class="nav-link">イベントアーカイブ</a>
+					</li>
+					<li class="nav-item plus-icon-nav-item">
+						<a href="#" class="nav-link">インタビューアーカイブ</a>
+					</li>
+					<li class="nav-item plus-icon-nav-item">
+						<a href="#" class="nav-link">FAQページ</a>
+					</li>
+					<li class="nav-item plus-icon-nav-item">
+						<a href="#" class="nav-link">固定ページ(デフォルト)</a>
+					</li>
+					<li class="nav-item plus-icon-nav-item">
+						<a href="#" class="nav-link">CONCEPT</a>
+					</li>
+					<li class="nav-item plus-icon-nav-item">
+						<a href="#" class="nav-link">SERVICE</a>
+					</li>
+					<li class="nav-item plus-icon-nav-item">
+						<a href="#" class="nav-link">FLOOR</a>
+					</li>
+					<li class="nav-item plus-icon-nav-item">
+						<a href="#" class="nav-link">ACCESS</a>
+					</li>
+				</ul>
+			</div>
 			<li class="nav-item">
 				<a class="nav-link" href="#">SERVICE</a>
 			</li>
@@ -74,4 +73,5 @@
 			</li>
 		</ul>
 	</div>
+</div>
 </nav>
