--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -1,77 +1,101 @@
 <nav class="navbar navbar-light fixed-top nav-wrapper navbar-expand-xl">
-	<div class="container-fluid">
-	<a href="#" class="img-wrapper">
-		<img src="../../../page/img/header-logo.png" class="logo-img" />
-	</a>
-	<button class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false">
-		<div class="humberger-icon"></div>
-		<div class="humberger-icon"></div>
-		<div class="humberger-icon"></div>
-	</button>
-	<div class="collapse navbar-collapse" id="navbarNav">
-		<ul class="navbar-nav">
-			<li class="nav-item">
-				<a class="nav-link" href="#">HOME</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">CONCEPT</a>
-				<button class="navbar-toggler plus-icon"  data-toggle="collapse" data-target="#plus-icon" aria-controls="#plus-icon" aria-expanded="false">
-					<span></span>
-				</button>
-			</li>
-			<div class="collapse navbar-collapse" id="plus-icon">
-				<ul class="navbar-nav">
-					<li class="nav-item plus-icon-nav-item">
-						<a href="#" class="nav-link">ブログアーカイブ</a>
-					</li>
-					<li class="nav-item plus-icon-nav-item">
-						<a href="#" class="nav-link">お知らせアーカイブ</a>
-					</li>
-					<li class="nav-item plus-icon-nav-item">
-						<a href="#" class="nav-link">イベントアーカイブ</a>
-					</li>
-					<li class="nav-item plus-icon-nav-item">
-						<a href="#" class="nav-link">インタビューアーカイブ</a>
-					</li>
-					<li class="nav-item plus-icon-nav-item">
-						<a href="#" class="nav-link">FAQページ</a>
-					</li>
-					<li class="nav-item plus-icon-nav-item">
-						<a href="#" class="nav-link">固定ページ(デフォルト)</a>
-					</li>
-					<li class="nav-item plus-icon-nav-item">
-						<a href="#" class="nav-link">CONCEPT</a>
-					</li>
-					<li class="nav-item plus-icon-nav-item">
-						<a href="#" class="nav-link">SERVICE</a>
-					</li>
-					<li class="nav-item plus-icon-nav-item">
-						<a href="#" class="nav-link">FLOOR</a>
-					</li>
-					<li class="nav-item plus-icon-nav-item">
-						<a href="#" class="nav-link">ACCESS</a>
-					</li>
-				</ul>
-			</div>
-			<li class="nav-item">
-				<a class="nav-link" href="#">SERVICE</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">FLOOR</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">INTERVIEW</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">BLOG</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">ACCESS</a>
-			</li>
-			<li class="nav-item">
-				<a class="nav-link" href="#">DOWNLOAD</a>
-			</li>
-		</ul>
-	</div>
-</div>
+  <div class="container-fluid">
+    <a href="#" class="img-wrapper">
+      <img src="../../../page/img/header-logo.png" class="logo-img" />
+    </a>
+    <button
+      class="navbar-toggler"
+      data-toggle="collapse"
+      data-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+    >
+      <div class="humberger-icon"></div>
+      <div class="humberger-icon"></div>
+      <div class="humberger-icon"></div>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">HOME</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            data-toggle="dropdown"
+            id="navbarDropdownMenuLink"
+            href="#"
+            role="button"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+            aria-haspopup="true"
+            >CONCEPT</a
+          >
+          <button
+            class="navbar-toggler plus-icon"
+            data-toggle="collapse"
+            data-target="#plus-icon"
+            aria-controls="#plus-icon"
+            aria-expanded="false"
+          >
+            <span></span>
+          </button>
+          <ul
+            class="navbar-nav dropdown-menu"
+            id="plus-icon"
+            aria-labelledby="navbarDropdownMenuLink"
+          >
+            <li class="nav-item plus-icon-nav-item dropdown-item">
+              <a href="#" class="nav-link">ブログアーカイブ</a>
+            </li>
+            <li class="nav-item plus-icon-nav-item dropdown-item">
+              <a href="#" class="nav-link">お知らせアーカイブ</a>
+            </li>
+            <li class="nav-item plus-icon-nav-item dropdown-item">
+              <a href="#" class="nav-link">イベントアーカイブ</a>
+            </li>
+            <li class="nav-item plus-icon-nav-item dropdown-item">
+              <a href="#" class="nav-link">インタビューアーカイブ</a>
+            </li>
+            <li class="nav-item plus-icon-nav-item dropdown-item">
+              <a href="#" class="nav-link">FAQページ</a>
+            </li>
+            <li class="nav-item plus-icon-nav-item dropdown-item">
+              <a href="#" class="nav-link">固定ページ(デフォルト)</a>
+            </li>
+            <li class="nav-item plus-icon-nav-item dropdown-item">
+              <a href="#" class="nav-link">CONCEPT</a>
+            </li>
+            <li class="nav-item plus-icon-nav-item dropdown-item">
+              <a href="#" class="nav-link">SERVICE</a>
+            </li>
+            <li class="nav-item plus-icon-nav-item dropdown-item">
+              <a href="#" class="nav-link">FLOOR</a>
+            </li>
+            <li class="nav-item plus-icon-nav-item dropdown-item">
+              <a href="#" class="nav-link">ACCESS</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">SERVICE</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">FLOOR</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">INTERVIEW</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">BLOG</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">ACCESS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">DOWNLOAD</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
