レビューの修正

--- a/src/components/organisms/news/news.html
+++ b/src/components/organisms/news/news.html
@@ -3,40 +3,40 @@
     <p class="news-title-left">News</p>
     <p class="news-title-right">お知らせ</p>
   </div>
-  <div class="news-article-wrapper">
-    <a href="#">
+  <a href="#">
+    <article class="news-article-wrapper">
       <time datetime="2018-06-20">2018.06.20</time>
       <p>
         ブックカフェ・コワーキング系サイト向けテーマ「Switch」をリリースしました。
       </p>
-    </a>
-  </div>
-  <div class="news-article-wrapper">
-    <a href="#">
+    </article>
+  </a>
+  <a href="#">
+    <article class="news-article-wrapper">
       <time datetime="2018-06-18">2018.06.18</time>
-      <p>種のレイアウトから選択できるテンプレートを固定ページに実装</p>
-    </a>
-  </div>
-  <div class="news-article-wrapper">
-    <a href="#">
+      <p>3種のレイアウトから選択できるテンプレートを固定ページに実装</p>
+    </article>
+  </a>
+  <a href="#">
+    <article class="news-article-wrapper">
       <time datetime="2018-06-12">2018.06.12</time>
       <p>利用者からのご質問をまとめた「FAQ」ページをアップしました。</p>
-    </a>
-  </div>
-  <div class="news-article-wrapper">
-    <a href="#">
+    </article>
+  </a>
+  <a href="#">
+    <article class="news-article-wrapper">
       <time datetime="2018-06-08">2018.06.08</time>
       <p>
         デモ用のサンプルデータを表示する「インポート機能」でサイト構築を快適に？
       </p>
-    </a>
-  </div>
-  <div class="news-article-wrapper last-news-article-wrapper">
-    <a href="#">
+    </article>
+  </a>
+  <a href="#">
+    <article class="news-article-wrapper last-news-article-wrapper">
       <time datetime="2018-06-02">2018.06.02</time>
       <p>テーマのアップデート情報について</p>
-    </a>
-  </div>
+    </article>
+  </a>
   <div class="news-more-wrapper">
     <a href="#" class="news-more-title">
       お知らせ一覧
