--- a/src/components/organisms/events/events.html
+++ b/src/components/organisms/events/events.html
@@ -1,43 +1,43 @@
 <div class="news-events-wrapper">
   <div class="news-title-wrapper">
-    <p class="news-title-left">News</p>
-    <p class="news-title-right">イベント</p>
+    <span class="news-title-left">Event</span>
+    <span class="news-title-right">イベント</span>
   </div>
-  <div class="img-and-news-wrapper">
-		<a href="#">
-			<div class="img-wrapper">
-				<img src="../../../page/img/organisms-img-2.png" />
-			</div>
-			<div class="news-events-wrapper">
-				<p>全ての業種に対応した起業応援セミナーを開催します。</p>
-				<time datetime="2018-08-23">2018.08.23</time>
-			</div>
-		</a>
-  </div>
-  <div class="img-and-news-wrapper">
-		<a href="#">
-			<div class="img-wrapper">
-				<img src="../../../page/img/organisms-img-1.png" />
-			</div>
-			<div class="news-events-wrapper">
-				<p>第3回 Switchクリエイター交流会開催いたします！</p>
-				<time datetime="2018-08-23">2018.08.23</time>
-			</div>
-		</a>
-  </div>
-  <div class="img-and-news-wrapper last-img-and-news-wrapper">
-		<a href="#">
-			<div class="img-wrapper">
-				<img src="../../../page/img/organisms-img-3.png" />
-			</div>
-			<div class="news-events-wrapper">
-				<p>
-					Webビジネス初心者の方必見！Webサイト作成講座を3回にわたって開催します。
-				</p>
-				<time datetime="2018-08-23">2018.08.23</time>
-			</div>
-		</a>
-  </div>
+  <a href="#">
+    <article class="img-and-news-wrapper">
+      <div class="img-wrapper">
+        <img src="../../../page/img/organisms-img-2.png" />
+      </div>
+      <div class="news-events-wrapper">
+        <p>全ての業種に対応した起業応援セミナーを開催します。</p>
+        <time datetime="2018-08-23">2018.08.23</time>
+      </div>
+    </article>
+  </a>
+  <a href="#">
+    <article class="img-and-news-wrapper">
+      <div class="img-wrapper">
+        <img src="../../../page/img/organisms-img-1.png" />
+      </div>
+      <div class="news-events-wrapper">
+        <p>第3回 Switchクリエイター交流会開催いたします！</p>
+        <time datetime="2018-08-23">2018.08.23</time>
+      </div>
+    </article>
+  </a>
+  <a href="#">
+    <article class="img-and-news-wrapper last-img-and-news-wrapper">
+      <div class="img-wrapper">
+        <img src="../../../page/img/organisms-img-3.png" />
+      </div>
+      <div class="news-events-wrapper">
+        <p>
+          Webビジネス初心者の方必見！Webサイト作成講座を3回にわたって開催します。
+        </p>
+        <time datetime="2018-08-23">2018.08.23</time>
+      </div>
+    </article>
+  </a>
   <div class="news-more-wrapper">
     <a href="#" class="news-more-title">
       イベント一覧
