--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -20,59 +20,57 @@
           <a class="nav-link" href="#">HOME</a>
         </li>
         <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            data-toggle="dropdown"
-            id="navbarDropdownMenuLink"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            aria-haspopup="true"
-            >CONCEPT</a
-          >
-          <button
-            class="navbar-toggler plus-icon"
-            data-toggle="collapse"
-            data-target="#plus-icon"
-            aria-controls="#plus-icon"
-            aria-expanded="false"
-          >
-            <span></span>
-          </button>
-          <ul
-            class="navbar-nav dropdown-menu"
-            id="plus-icon"
-            aria-labelledby="navbarDropdownMenuLink"
-          >
-            <li class="nav-item plus-icon-nav-item dropdown-item">
+          <div class="concept-plus-icon-wrapper">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              data-toggle="collapse"
+              role="button"
+              data-bs-toggle="dropdown"
+              data-target="#concept-dropdown"
+              aria-controls="#concept-dropdown"
+              aria-expanded="false"
+              >CONCEPT</a
+            >
+            <button
+              class="plus-icon"
+              data-toggle="collapse"
+              data-target="#concept-dropdown"
+              aria-controls="#concept-dropdown"
+              aria-expanded="false"
+            >
+              <span></span>
+            </button>
+          </div>
+          <ul class="dropdown-menu" id="concept-dropdown">
+            <li class="dropdown-item">
               <a href="#" class="nav-link">ブログアーカイブ</a>
             </li>
-            <li class="nav-item plus-icon-nav-item dropdown-item">
+            <li class="dropdown-item">
               <a href="#" class="nav-link">お知らせアーカイブ</a>
             </li>
-            <li class="nav-item plus-icon-nav-item dropdown-item">
+            <li class="dropdown-item">
               <a href="#" class="nav-link">イベントアーカイブ</a>
             </li>
-            <li class="nav-item plus-icon-nav-item dropdown-item">
+            <li class="dropdown-item">
               <a href="#" class="nav-link">インタビューアーカイブ</a>
             </li>
-            <li class="nav-item plus-icon-nav-item dropdown-item">
+            <li class="dropdown-item">
               <a href="#" class="nav-link">FAQページ</a>
             </li>
-            <li class="nav-item plus-icon-nav-item dropdown-item">
+            <li class="dropdown-item">
               <a href="#" class="nav-link">固定ページ(デフォルト)</a>
             </li>
-            <li class="nav-item plus-icon-nav-item dropdown-item">
+            <li class="dropdown-item">
               <a href="#" class="nav-link">CONCEPT</a>
             </li>
-            <li class="nav-item plus-icon-nav-item dropdown-item">
+            <li class="dropdown-item">
               <a href="#" class="nav-link">SERVICE</a>
             </li>
-            <li class="nav-item plus-icon-nav-item dropdown-item">
+            <li class="dropdown-item">
               <a href="#" class="nav-link">FLOOR</a>
             </li>
-            <li class="nav-item plus-icon-nav-item dropdown-item">
+            <li class="dropdown-item">
               <a href="#" class="nav-link">ACCESS</a>
             </li>
           </ul>
