--- a/src/components/organisms/events/events.scss
+++ b/src/components/organisms/events/events.scss
@@ -1,6 +1,7 @@
 @use "../../variables" as *;
 
 .news-events-wrapper {
+  width: 100%;
   .news-title-wrapper {
     margin-bottom: 42px;
   }
@@ -21,36 +22,37 @@
       border: 1px solid $v_gray_gainsboro;
       border-bottom: none;
       display: flex;
+      align-items: center;
       .img-wrapper {
         overflow: hidden;
         img {
           display: none;
 
           @media screen and (min-width: $v_breakpoint_lg) {
-            display: inline-block;
-            height: 100%;
-            width: 100%;
+            width: 221px;
+            height: 141px;
+            display: block;
             transition: transform 0.5s ease;
           }
         }
       }
 
       .news-events-wrapper {
-        padding: 10px 0 16px 20px;
+        padding: 10px 20px 16px;
 
         @media screen and (min-width: $v_breakpoint_lg) {
-          padding: 49px 24px;
+          padding: 0 24px;
+          width: calc(100% - 221px);
         }
 
         p {
           color: $v_black;
-          margin-bottom: 8px;
-          width: 400px;
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
           line-height: 23px;
           transition: color 0.2s ease;
+          margin-bottom: 8px;
 
           @media screen and (min-width: $v_breakpoint_lg) {
             width: 100%;
