xlの基本は完成

--- a/src/components/organisms/header/header.html
+++ b/src/components/organisms/header/header.html
@@ -21,56 +21,87 @@
         </li>
         <li class="nav-item dropdown">
           <div class="concept-plus-icon-wrapper">
+            <a href="#" class="lg-concept nav-link">CONCEPT</a>
             <a
-              class="nav-link dropdown-toggle"
               href="#"
-              data-toggle="collapse"
-              role="button"
-              data-bs-toggle="dropdown"
-              data-target="#concept-dropdown"
-              aria-controls="#concept-dropdown"
+              class="xl-concept dropdown-toggle"
+              type="button"
+              id="dropdownMenu"
+              data-toggle="dropdown"
+              aria-haspopup="true"
               aria-expanded="false"
               >CONCEPT</a
             >
-            <button
-              class="plus-icon"
+            <img
+              src="../../../page/img/plus.svg"
+              class="plus-icon navbar-toggler"
               data-toggle="collapse"
-              data-target="#concept-dropdown"
-              aria-controls="#concept-dropdown"
+              data-target="#conceptNav"
+              aria-controls="conceptNav"
               aria-expanded="false"
-            >
-              <span></span>
-            </button>
+            />
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu">
+              <li class="dropdown-item">
+                <a href="#">ブログアーカイブ</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="#">お知らせアーカイブ</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="#">イベントアーカイブ</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="#">インタビューアーカイブ</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="#">FAQページ</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="#">固定ページ(デフォルト)</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="#">CONCEPT</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="#">SERVICE</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="#">FLOOR</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="#">ACCESS</a>
+              </li>
+            </ul>
           </div>
-          <ul class="dropdown-menu" id="concept-dropdown">
-            <li class="dropdown-item">
+          <ul class="collapse navbar-nav concept-nav" id="conceptNav">
+            <li class="nav-item">
               <a href="#" class="nav-link">ブログアーカイブ</a>
             </li>
-            <li class="dropdown-item">
+            <li class="nav-item">
               <a href="#" class="nav-link">お知らせアーカイブ</a>
             </li>
-            <li class="dropdown-item">
+            <li class="nav-item">
               <a href="#" class="nav-link">イベントアーカイブ</a>
             </li>
-            <li class="dropdown-item">
+            <li class="nav-item">
               <a href="#" class="nav-link">インタビューアーカイブ</a>
             </li>
-            <li class="dropdown-item">
+            <li class="nav-item">
               <a href="#" class="nav-link">FAQページ</a>
             </li>
-            <li class="dropdown-item">
+            <li class="nav-item">
               <a href="#" class="nav-link">固定ページ(デフォルト)</a>
             </li>
-            <li class="dropdown-item">
+            <li class="nav-item">
               <a href="#" class="nav-link">CONCEPT</a>
             </li>
-            <li class="dropdown-item">
+            <li class="nav-item">
               <a href="#" class="nav-link">SERVICE</a>
             </li>
-            <li class="dropdown-item">
+            <li class="nav-item">
               <a href="#" class="nav-link">FLOOR</a>
             </li>
-            <li class="dropdown-item">
+            <li class="nav-item">
               <a href="#" class="nav-link">ACCESS</a>
             </li>
           </ul>
