--- a/src/components/organisms/header/header.scss
+++ b/src/components/organisms/header/header.scss
@@ -6,11 +6,17 @@
 
   @media screen and (min-width: $v_breakpoint_xl) {
     background-color: $v_black_50;
+    display: flex;
+    justify-content: space-between;
   }
 
   .img-wrapper {
     margin-left: 16px;
     padding: 20px 0;
+
+    @media screen and (min-width: $v_breakpoint_xl) {
+      margin-left: 30px;
+    }
 
     .logo-img {
       width: 120px;
@@ -36,19 +42,23 @@
 
   .navbar-collapse {
     .navbar-nav {
-      position: relative;
       .nav-item {
         padding: 0 18px;
 
         @media screen and (min-width: $v_breakpoint_xl) {
           padding: 0;
+          display: flex;
           align-items: center;
           margin-left: 40px;
-          display: flex;
 
           a {
             padding: 0;
             margin: 35px 0;
+            transition: color 0.2s ease;
+
+            &:hover {
+              color: $v_gray_nobel;
+            }
           }
         }
 
@@ -90,6 +100,9 @@
 
             .dropdown-item {
               background-color: $v_black;
+              a:hover {
+                color: $v_white;
+              }
             }
           }
         }
@@ -104,6 +117,10 @@
             width: 220px;
           }
         }
+      }
+
+      .nav-item:nth-child(8) {
+        margin-right: 50px;
       }
     }
   }
